@@ -1,17 +1,25 @@
 import java.util.*;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 public class EdgeTable {
    private int numFigure;
    private String name;
    private ArrayList alRelatedTables, alNativeFields;
    private int[] relatedTables, relatedFields, nativeFields;
+   public static Logger logger = LogManager.getLogger(EdgeTable.class);
    
    public EdgeTable(String inputString) {
+      try {
       StringTokenizer st = new StringTokenizer(inputString, EdgeConvertFileParser.DELIM);
       numFigure = Integer.parseInt(st.nextToken());
       name = st.nextToken();
       alRelatedTables = new ArrayList();
       alNativeFields = new ArrayList();
+      logger.debug("EdgeTable initialized, with inputString: " + inputString);
+      } catch (Exception exc) {
+         logger.error("EdgeTable constructor failed: " + exc);
+      }
    }
    
    public int getNumFigure() {
@@ -23,7 +31,8 @@ public class EdgeTable {
    }
    
    public void addRelatedTable(int relatedTable) {
-      alRelatedTables.add(new Integer(relatedTable));
+      logger.debug("Adding related table " + relatedTable);
+      alRelatedTables.add(Integer.valueOf(relatedTable));
    }
    
    public int[] getRelatedTablesArray() {
@@ -35,6 +44,7 @@ public class EdgeTable {
    }
    
    public void setRelatedField(int index, int relatedValue) {
+      logger.debug("Adding related field " + relatedValue + " at " + index);
       relatedFields[index] = relatedValue;
    }
    
@@ -43,7 +53,8 @@ public class EdgeTable {
    }
 
    public void addNativeField(int value) {
-      alNativeFields.add(new Integer(value));
+      logger.debug("Adding native field " + value);
+      alNativeFields.add(Integer.valueOf(value));
    }
 
    public void moveFieldUp(int index) { //move the field closer to the beginning of the list
@@ -56,6 +67,7 @@ public class EdgeTable {
       int tempRelated = relatedFields[index - 1]; //save element at destination index
       relatedFields[index - 1] = relatedFields[index]; //copy target element to destination
       relatedFields[index] = tempRelated; //copy saved element to target's original location
+      logger.debug("EdgeTable Field moved up by " + index);
    }
    
    public void moveFieldDown(int index) { //move the field closer to the end of the list
@@ -68,6 +80,7 @@ public class EdgeTable {
       int tempRelated = relatedFields[index + 1]; //save element at destination index
       relatedFields[index + 1] = relatedFields[index]; //copy target element to destination
       relatedFields[index] = tempRelated; //copy saved element to target's original location
+      logger.debug("EdgeTable Field moved down by " + index);
    }
 
    public void makeArrays() { //convert the ArrayLists into int[]
@@ -88,6 +101,7 @@ public class EdgeTable {
       for (int i = 0; i < relatedFields.length; i++) {
          relatedFields[i] = 0;
       }
+      logger.debug("Converted ArrayList into int[]");
    }
 
    public String toString() {
